--- a/app/views/strikes/new.html.erb
+++ b/app/views/strikes/new.html.erb
@@ -1,3 +1,76 @@
 <% provide(:title, 'Create') %>
+
 <h1>new</h1>
-<p>....</p>
+<%= form_for @strike, html: {class: "form-horizontal"}  do |f| %>
+<div class="form-group">
+  <%= f.label :city, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.text_field :city, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :category, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.text_field :category, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :institution, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.text_field :institution, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :line, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.text_field :line, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :description, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.text_field :description, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :reporter, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.text_field :reporter, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :started_at, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.date_field :started_at, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :expected_duration, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <%= f.number_field :expected_duration, class: "form-control" %>
+  </div>
+</div>
+
+<div class="form-group">
+  <%= f.label :approved, class: "col-sm-2 control-label" %>
+  <div class="col-sm-10">
+    <div class="checkbox">
+      <label> <%= f.check_box :approved, class: "" %> </label>
+    </div>
+  </div>
+</div>
+
+<div class="form-group">
+  <div class="col-sm-offset-2 col-sm-10">
+    <%= f.submit "Add New Strike", class: "btn btn-primary" %>
+  </div>
+</div>
+
+<% end %>
