--- a/app/views/strikes/new.html.erb
+++ b/app/views/strikes/new.html.erb
@@ -1,15 +1,16 @@
 <% provide(:title, 'Create') %>
 
-<h1>new</h1>
+<h1>Create New Strike</h1>
 <%= form_for @strike, html: {class: "form-horizontal"}  do |f| %>
+<%= render 'shared/error_messages' %>
 <div class="form-group">
   <%= f.label :city, class: "col-sm-2 control-label" %>
   <div class="col-sm-10">
-    <%= f.text_field :city, class: "form-control" %>
+    <%= f.select :city, [['Select...', ''], ['Cordoba', 'CBA'], ['Buenos Aires', 'BA']], {}, {class: "form-control"} %>
   </div>
 </div>
 
-<div class="form-group">
+<div class="form-group ">
   <%= f.label :category, class: "col-sm-2 control-label" %>
   <div class="col-sm-10">
     <%= f.text_field :category, class: "form-control" %>
