added strike listing

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,10 +4,10 @@
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <%= link_to "Home",   '#' %>
+          <%= link_to "All", strikes_path %>
         </li>
         <li>
-          <%= link_to "Help",   '#' %>
+          <%= link_to "Create", create_path %>
         </li>
         <li>
           <%= link_to "Log in", '#' %>
